--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,9 +1,23 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
-    <!-- Base application theme. -->
-    <style name="Base.Theme.EcoAlert" parent="Theme.Material3.DayNight.NoActionBar">
-        <!-- Customize your light theme here. -->
-        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+    <style name="Theme.EcoAlert" parent="Theme.Material3.Light.NoActionBar">
+        <!-- Primary colors -->
+        <item name="colorPrimary">#000000</item>
+        <item name="colorPrimaryVariant">#121212</item>
+        <item name="colorOnPrimary">#FFFFFF</item>
+
+        <!-- Background and text colors -->
+        <item name="android:windowBackground">#FFFFFF</item>
+        <item name="android:textColor">#000000</item>
+        <item name="colorOnBackground">#000000</item>
+        <item name="android:colorAccent">#000000</item>
+
+        <!-- Button styles -->
+        <item name="buttonStyle">@style/Widget.Button.Uber</item>
     </style>
 
-    <style name="Theme.EcoAlert" parent="Base.Theme.EcoAlert" />
+    <style name="Widget.Button.Uber" parent="Widget.Material3.Button">
+        <item name="android:backgroundTint">#000000</item>
+        <item name="android:textColor">#FFFFFF</item>
+        <item name="cornerRadius">24dp</item>
+    </style>
 </resources>
