Adjust layout of menu

--- a/app/src/main/res/layout/item_menu.xml
+++ b/app/src/main/res/layout/item_menu.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
+    android:background="@drawable/shape_rounded_black_background"
     android:gravity="center"
+    android:orientation="vertical"
     android:padding="16dp">
 
     <ImageView
@@ -11,14 +13,16 @@
         android:layout_width="64dp"
         android:layout_height="64dp"
         android:layout_marginBottom="8dp"
-        android:contentDescription="string/menu_icon" />
+        android:contentDescription="string/menu_icon"
+        android:tint="@android:color/white"
+        tools:src="@drawable/ic_fire" />
 
     <TextView
         android:id="@+id/menuTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="16sp"
-        android:textColor="@android:color/black"
         android:gravity="center"
-        android:text="Menu Item" />
+        android:textColor="@android:color/white"
+        android:textSize="16sp"
+        tools:text="Text Item" />
 </LinearLayout>
