--- a/app/src/main/res/drawable/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable/ic_launcher_foreground.xml
@@ -1,30 +1,17 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:aapt="http://schemas.android.com/aapt"
     android:width="108dp"
     android:height="108dp"
-    android:viewportWidth="108"
-    android:viewportHeight="108">
-    <path android:pathData="M31,63.928c0,0 6.4,-11 12.1,-13.1c7.2,-2.6 26,-1.4 26,-1.4l38.1,38.1L107,108.928l-32,-1L31,63.928z">
-        <aapt:attr name="android:fillColor">
-            <gradient
-                android:endX="85.84757"
-                android:endY="92.4963"
-                android:startX="42.9492"
-                android:startY="49.59793"
-                android:type="linear">
-                <item
-                    android:color="#44000000"
-                    android:offset="0.0" />
-                <item
-                    android:color="#00000000"
-                    android:offset="1.0" />
-            </gradient>
-        </aapt:attr>
-    </path>
+    android:viewportWidth="32"
+    android:viewportHeight="32">
+  <group android:scaleX="0.4461111"
+      android:scaleY="0.4461111"
+      android:translateX="8.862223"
+      android:translateY="8.862223">
     <path
-        android:fillColor="#FFFFFF"
-        android:fillType="nonZero"
-        android:pathData="M65.3,45.828l3.8,-6.6c0.2,-0.4 0.1,-0.9 -0.3,-1.1c-0.4,-0.2 -0.9,-0.1 -1.1,0.3l-3.9,6.7c-6.3,-2.8 -13.4,-2.8 -19.7,0l-3.9,-6.7c-0.2,-0.4 -0.7,-0.5 -1.1,-0.3C38.8,38.328 38.7,38.828 38.9,39.228l3.8,6.6C36.2,49.428 31.7,56.028 31,63.928h46C76.3,56.028 71.8,49.428 65.3,45.828zM43.4,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2c-0.3,-0.7 -0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C45.3,56.528 44.5,57.328 43.4,57.328L43.4,57.328zM64.6,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2s-0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C66.5,56.528 65.6,57.328 64.6,57.328L64.6,57.328z"
-        android:strokeWidth="1"
-        android:strokeColor="#00000000" />
+        android:pathData="M22,9c-0.062,2.675 -2.07,4.934 -2.07,4.934C19.93,8.958 16,5 16,5s-0.053,2.962 -2.043,5.948C11.967,3.981 5.995,0 5.995,0C8.981,10.948 5,14.93 5,22.892C5,27.563 8.954,32 15,32c8.957,0 10.689,-3.288 11.615,-6.993C27.891,19.906 25.98,13.976 22,9zM24.676,24.521C24.033,27.09 23.307,30 15,30c-5.008,0 -8,-3.614 -8,-7.108c0,-2.676 0.488,-4.873 1.004,-7.199c0.656,-2.949 1.328,-5.968 1.037,-9.961c3.084,4.269 4.182,9.925 4.182,9.925s2.871,-4.031 3.643,-5.903C17.457,10.957 18,15 18,19c0,0 2.656,-2.188 4.648,-5.478C24.746,17.284 25.502,21.217 24.676,24.521z"
+        android:fillColor="#ffffff"/>
+    <path
+        android:pathData="M22.432,16.795l-0.85,0.985c-1.053,1.228 -2.049,2.392 -4.708,3.73c-0.381,-1.142 -0.727,-2.399 -0.727,-4.323v-1.709l-1.518,2.378c-0.512,0.811 -0.936,1.483 -1.568,2.376c-0.959,-2.162 -1.637,-3.761 -2.152,-5.212l-0.479,-1.35l-0.52,1.51c-0.66,1.921 -1.285,3.735 -1.285,8.444c0,0.276 0.223,0.5 0.5,0.5c0.275,0 0.5,-0.224 0.5,-0.5c0,-3.609 0.359,-5.396 0.84,-6.941c0.52,1.322 1.176,2.825 2.037,4.75l0.352,0.784l0.508,-0.692c0.83,-1.13 1.324,-1.89 1.865,-2.743c0.158,1.479 0.523,2.54 0.885,3.59l0.182,0.528l0.506,-0.239c2.703,-1.284 3.968,-2.453 4.972,-3.575c0.156,1.864 -0.09,3.904 -0.674,5.353c-0.104,0.256 0.021,0.547 0.277,0.65c0.061,0.024 0.125,0.036 0.188,0.036c0.197,0 0.385,-0.118 0.463,-0.313c0.775,-1.924 1.008,-4.664 0.592,-6.982L22.432,16.795z"
+        android:fillColor="#ffffff"/>
+  </group>
 </vector>
